[tool.poetry]
name = "my-faqs"
version = "0.1.0"
description = ""
authors = ["Renan Traba <hellupline@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"
pyquery = "^2.0.0"
python-magic = "^0.4.27"
tenacity = "^8.2.2"
tqdm = "^4.65.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
ipython = "8.12.0"
pynvim = "^0.4.3"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pyright = "^1.1.305"
types-requests = "^2.29.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
known_first_party = ["mytube"]
src_paths = ["mytube"]
skip_glob = ["*/setup.py"]
filter_files = true

[tool.black]
line-length = 110
target_version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
