[tool.poetry]
name = "my-faqs"
version = "0.1.0"
description = ""
authors = ["Renan Traba <hellupline@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"
requests-cache = "^1.1.0"
pyquery = "^2.0.0"
python-magic = "^0.4.27"
tenacity = "^8.2.2"
tqdm = "^4.65.0"
click = "^8.1.3"
requests-html = "^0.10.0"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
pynvim = "^0.4.3"
pyright = "^1.1.316"
ruff = "^0.0.292"
mypy = "^1.4.1"
black = "^23.3.0"
isort = "^5.12.0"
types-requests = "^2.31.0.1"
types-tqdm = "^4.66.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target_version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
known_first_party = ["library"]
src_paths = ["library"]
skip_glob = ["*/setup.py"]
filter_files = true

[tool.ruff]
line-length = 110

[tool.mypy]
check_untyped_defs = true
